--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ydsft",
-  "version": "0.0.15",
+  "version": "0.0.18",
   "description": "디자인 시스템 테스트",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "tsc --noEmit && rm -rf dist && craco build && tsc --isolatedModules --emitDeclarationOnly",
+    "build": "tsc --noEmit && rm -rf dist && craco build && tsc --emitDeclarationOnly",
     "test": "craco test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
